[project]
name = "python-auth-backend"
version = "0.1.0"
description = "A python authentication backend using FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "authlib>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0"
]
